# vision_landing

./: .gitignore  README.md  config.json  vision_landing  vision_landing.conf  vision_landing.service
calibration/: aruco_calibration_board_a4.yml  d435-1280x720.yml  d435-640x480.yml  dji-mini-se-1280x720.yml  ocam5cr-calibration-1280x720.yml  ocam5cr-calibration-640x480.alt.yml  ocam5cr-calibration-640x480.yml  r200-calibration-1280x720.yml  r200-calibration-1920x1080.yml  r200-calibration-640x480.yml  raspicamv1-calibration-1280x720.yml  raspicamv1-calibration-640x480.yml  raspicamv2-calibration-640x480.yml  sj4000-calibration-1280x720.yml  sj4000-calibration-640x480.yml
markers/: 2x2map.yml
src/: CMakeLists.txt  apriltag.cpp  apriltag.h  pkQueueTS.hpp  raw-tcp-video.cpp  raw-tcp-video.h  track_targets  track_targets.cpp
src/apriltag/: apriltag-detector.cpp  apriltag-detector.h
